@@ -1,4 +1,6 @@
--Dmaven.wagon.httpconnectionManager.ttlSeconds=120
--Dmaven.wagon.http.retryHandler.requestSentEnabled=true
+--add-opens=java.base/java.io=ALL-UNNAMED
+--add-opens=java.base/java.lang=ALL-UNNAMED
 -Dmaven.wagon.http.retryHandler.count=10
+-Dmaven.wagon.http.retryHandler.requestSentEnabled=true
+-Dmaven.wagon.httpconnectionManager.ttlSeconds=120
 -Xmx5g
